--- a/CvBerkaySezer/Views/Home/Index.cshtml
+++ b/CvBerkaySezer/Views/Home/Index.cshtml
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="~/Content/fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="~/Content/css/aos.css">
     <link rel="stylesheet" href="~/Content/css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <title>Berkay Sezer</title>
 </head>
@@ -67,7 +68,7 @@
                         <a href="#about-section" class="nav-link">Hakkımda</a>
                     </li>
                     <li><a href="#services-section" class="nav-link">Hizmetler</a></li>
-                    <li><a href="#contact-section" class="nav-link">İletişim</a></li>
+                    <li><a href="#contact-section" class="nav-link" id="iletisim">İletişim</a></li>
                 </ul>
 
                 <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-inline-block" data-toggle="collapse" data-target="#main-navbar">
@@ -89,6 +90,19 @@
     @Html.Action("PartialProject", "Home")
 
     @Html.Action("PartialContact", "Home")
+
+    @if (TempData["Message"] != null && TempData["Type"].ToString() == "error")
+    {
+        <div class="container">
+            <div class="row justify-content-center text-center">
+                <div class="col-md-12">
+                    <div class="alert alert-danger justify-content-center text-center" role="alert">
+                        @MvcHtmlString.Create(TempData["Message"].ToString())
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
 
     <div class="site-footer">
         <div class="container">
@@ -135,6 +149,39 @@
 
 
     <script src="~/Content/js/custom.js"></script>
+
+
+    @if (TempData["Message"] != null && TempData["Type"].ToString() == "success")
+    {
+        <script>
+            const Toast = Swal.mixin({
+                toast: true,
+                position: 'top-end',
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                    toast.addEventListener('mouseenter', Swal.stopTimer)
+                    toast.addEventListener('mouseleave', Swal.resumeTimer)
+                }
+            })
+
+            Toast.fire({
+                icon: '@TempData["Type"]',
+                title: '@TempData["Message"]'
+            })
+        </script>
+    }
+
+    @if (TempData["Target"] != null)
+    {
+        <script>
+            // Sayfa yüklendikten sonra JavaScript kodunu çalıştırın
+            $(document).ready(function () {
+                document.getElementById('iletisim').click();
+            });
+        </script>
+    }
 
 </body>
 
