--- a/CvBerkaySezer/Views/Home/PartialContact.cshtml
+++ b/CvBerkaySezer/Views/Home/PartialContact.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="untree_co-section" id="contact-section">
+﻿@using CvBerkaySezer.Models
+@model Contact
+<div class="untree_co-section" id="contact-section">
     <div class="container">
         <div class="row mb-5">
             <div class="col-lg-7 text-center mx-auto">
@@ -13,23 +15,28 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <form action="#">
+                @using (Html.BeginForm("Contact", "Home", FormMethod.Post))
+                {
                     <div class="row">
                         <div class="col-lg-6 form-group">
-                            <input type="text" class="form-control" placeholder="Ad">
+                            @Html.TextBoxFor(x => x.Name, "", new { @class = "form-control", @placeholder = "Ad", @maxlength = "50" })
+                            @Html.ValidationMessageFor(x => x.Name, "", new { @class = "small", @style = "color:red;" })
                         </div>
                         <div class="col-lg-6 form-group">
-                            <input type="text" class="form-control" placeholder="Soyad">
+                            @Html.TextBoxFor(x => x.Surname, "", new { @class = "form-control", @placeholder = "Soyad", @maxlength = "50" })
+                            @Html.ValidationMessageFor(x => x.Surname, "", new { @class = "small", @style = "color:red;" })
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12 form-group">
-                            <input type="email" class="form-control" placeholder="E-mail Adresi">
+                            @Html.TextBoxFor(x => x.Email, "", new { @class = "form-control", @placeholder = "E-mail", @type = "email", @maxlength = "50" })
+                            @Html.ValidationMessageFor(x => x.Email, "", new { @class = "small", @style = "color:red;" })
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12 form-group">
-                            <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mesajını yaz..."></textarea>
+                            @Html.TextAreaFor(x => x.Message, new { @class = "form-control", @placeholder = "Mesajını yaz...", @rows = "7", @cols = "30", @maxlength = "1056" })
+                            @Html.ValidationMessageFor(x => x.Message, "", new { @class = "small", @style = "color:red;" })
                         </div>
                     </div>
                     <div class="row">
@@ -37,7 +44,7 @@
                             <input type="submit" class="btn btn-black" value="Gönder">
                         </div>
                     </div>
-                </form>
+                }
             </div>
         </div>
     </div>
