--- a/CvBerkaySezer/Views/Home/PartialProject.cshtml
+++ b/CvBerkaySezer/Views/Home/PartialProject.cshtml
@@ -1,5 +1,18 @@
-﻿<div class="untree_co-section untree_co-section-4 pb-0" id="portfolio-section">
+﻿@using CvBerkaySezer.Models
+@model List<Project>
+<div class="untree_co-section untree_co-section-4 pb-0" id="portfolio-section">
     <div class="container">
+        <div class="row mb-5">
+            <div class="col-lg-7 text-center mx-auto">
+                <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Projeler</strong></h2>
+                <div class="wave gsap-reveal-hero">
+                    <svg>
+                        <path d="M10,10 L50,100 L90,50" stroke="#0389ff"></path>
+                    </svg>
+                </div>
+            </div>
+        </div>
+
         <div class="relative"><div class="loader-portfolio-wrap"><div class="loader-portfolio"></div></div> </div>
         <div id="portfolio-single-holder"></div>
 
@@ -7,181 +20,23 @@
 
             <div id="posts" class="row">
 
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-1.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Obsessed Book</h3>
-                                <p>web, branding</p>
+                @foreach (var project in Model)
+                {
+                    <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+                        <a href="@project.ProjectUrl" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
+                            <div class="overlay">
+                                <span class="wrap-icon icon-link2"></span>
+                                <div class="portfolio-item-content">
+                                    <h3>@project.Title</h3>
+                                    <p>@project.Tag/p>
+                                </div>
                             </div>
-                        </div>
-                        <img src="~/Content/images/img_1.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-2.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="2">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Book Binding</h3>
-                                <p>illustration, application</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_2.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Fresh Fruits</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_3.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Powerful Speaker</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_4.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Wireless Headset</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_5.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-1.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Black & White Cubic</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_6.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-2.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="2">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Nike Shoe</h3>
-                                <p>illustration, application</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_7.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Old Typewriter</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_8.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Walking Man</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_9.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Progress Journal</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_10.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>The Dog</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_11.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Beautiful Woman</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_12.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
-
-                <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                    <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-                        <div class="overlay">
-                            <span class="wrap-icon icon-link2"></span>
-                            <div class="portfolio-item-content">
-                                <h3>Book Binding</h3>
-                                <p>web, branding</p>
-                            </div>
-                        </div>
-                        <img src="~/Content/images/img_2.jpg" class="lazyload  img-fluid" alt="Images" />
-                    </a>
-                </div>
+                            <img src="@project.ImageUrl" class="lazyload  img-fluid" alt="Images" />
+                        </a>
+                    </div>
+                }
             </div>
         </div>
-
-
-        <!-- </div>
-        </div> -->
     </div>
 </div>
 
