--- a/CvBerkaySezer/Views/Home/Index.cshtml
+++ b/CvBerkaySezer/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Untree.co">
-    <link rel="shortcut icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="https://berkaysezer.com/Content/favicon.ico" />
 
     <meta name="description" content="" />
     <meta name="keywords" content="" />
