--- a/CvBerkaySezer/Views/Home/PartialContact.cshtml
+++ b/CvBerkaySezer/Views/Home/PartialContact.cshtml
@@ -35,6 +35,12 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12 form-group">
+                            @Html.TextBoxFor(x => x.Subject, "", new { @class = "form-control", @placeholder = "Konu", @maxlength = "100" })
+                            @Html.ValidationMessageFor(x => x.Subject, "", new { @class = "small", @style = "color:red;" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 form-group">
                             @Html.TextAreaFor(x => x.Message, new { @class = "form-control", @placeholder = "Mesajını yaz...", @rows = "7", @cols = "30", @maxlength = "1056" })
                             @Html.ValidationMessageFor(x => x.Message, "", new { @class = "small", @style = "color:red;" })
                         </div>
