--- a/CvBerkaySezer/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
+++ b/CvBerkaySezer/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
@@ -9,10 +9,9 @@
     <div class="sidebar">
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <li class="nav-header">AYARLAR</li>
                 <li class="nav-item">
                     <a href="/Admin/Title" class="nav-link">
-                        <i class="nav-icon far fa-calendar-alt"></i>
+                        <i class="fa-solid fa-heading"></i>
                         <p>
                             Başlık
                         </p>
@@ -20,7 +19,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="/Admin/Content" class="nav-link">
-                        <i class="nav-icon far fa-calendar-alt"></i>
+                        <i class="fa-solid fa-list"></i>
                         <p>
                             İçerik
                         </p>
@@ -28,7 +27,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="/Admin/Service" class="nav-link">
-                        <i class="nav-icon far fa-calendar-alt"></i>
+                        <i class="fa-solid fa-store"></i>
                         <p>
                             Hizmetler
                         </p>
@@ -36,15 +35,15 @@
                 </li>
                 <li class="nav-item">
                     <a href="/Admin/Skill" class="nav-link">
-                        <i class="nav-icon far fa-calendar-alt"></i>
+                        <i class="fa-solid fa-bars-progress"></i>
                         <p>
                             Yetenekler
                         </p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="pages/calendar.html" class="nav-link">
-                        <i class="nav-icon far fa-calendar-alt"></i>
+                    <a href="/Admin/Project" class="nav-link">
+                        <i class="fa-solid fa-hand-holding-hand"></i>
                         <p>
                             Projeler
                         </p>
@@ -52,7 +51,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="/Admin/Message" class="nav-link">
-                        <i class="nav-icon far fa-calendar-alt"></i>
+                        <i class="fa-solid fa-message"></i>
                         <p>
                             Mesajlar
                         </p>
@@ -61,7 +60,7 @@
                 <li class="nav-header">KULLANICI</li>
                 <li class="nav-item">
                     <a href="/Admin/User" class="nav-link">
-                        <i class="nav-icon far fa-calendar-alt"></i>
+                        <i class="fa-solid fa-gear"></i>
                         <p>
                             Ayarlar
                         </p>
