--- a/CvBerkaySezer/Views/Home/PartialProject.cshtml
+++ b/CvBerkaySezer/Views/Home/PartialProject.cshtml
@@ -28,7 +28,7 @@
                                 <span class="wrap-icon icon-link2"></span>
                                 <div class="portfolio-item-content">
                                     <h3>@project.Title</h3>
-                                    <p>@project.Tag/p>
+                                    <p>@project.Tag</p>
                                 </div>
                             </div>
                             <img src="@project.ImageUrl" class="lazyload  img-fluid" alt="Images" />
