--- a/CvBerkaySezer/Areas/Admin/Views/User/Index.cshtml
+++ b/CvBerkaySezer/Areas/Admin/Views/User/Index.cshtml
@@ -21,7 +21,7 @@
         </div>
         <div class="row">
             <!-- /.col -->
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="card-header p-2">
                         <ul class="nav nav-pills">
@@ -34,30 +34,28 @@
                                 @using (Html.BeginForm("Index", "User", FormMethod.Post, new { @class = "form-horizontal" }))
                                 {
                                     <div class="form-group row">
-                                        @Html.LabelFor(x => x.FullName, "Ad Soyad", new { @class = "col-sm-2 col-form-label" })
-                                        <div class="col-sm-10">
+                                        @Html.LabelFor(x => x.FullName, "Ad Soyad", new { @class = "col-sm-3 col-form-label" })
+                                        <div class="col-sm-9">
                                             @Html.TextBoxFor(x => x.FullName, "", new { @class = "form-control" })
                                             @Html.ValidationMessageFor(x => x.FullName, "", new { @class = "small", @style = "color:red;" })
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                        @Html.LabelFor(x => x.UserName, "Kullanıcı Adı", new { @class = "col-sm-2 col-form-label" })
-                                        <div class="col-sm-10">
+                                        @Html.LabelFor(x => x.UserName, "Kullanıcı Adı", new { @class = "col-sm-3 col-form-label" })
+                                        <div class="col-sm-9">
                                             @Html.TextBoxFor(x => x.UserName, "", new { @class = "form-control" })
                                             @Html.ValidationMessageFor(x => x.UserName, "", new { @class = "small", @style = "color:red;" })
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                        @Html.LabelFor(x => x.Password, "Şifre", new { @class = "col-sm-2 col-form-label" })
-                                        <div class="col-sm-10">
+                                        @Html.LabelFor(x => x.Password, "Şifre", new { @class = "col-sm-3 col-form-label" })
+                                        <div class="col-sm-9">
                                             @Html.TextBoxFor(x => x.Password, "", new { @class = "form-control", type = "password" })
                                             @Html.ValidationMessageFor(x => x.Password, "", new { @class = "small", @style = "color:red;" })
                                         </div>
                                     </div>
-                                    <div class="form-group row">
-                                        <div class="offset-sm-2 col-sm-10">
-                                            <button type="submit" class="btn btn-primary">Kaydet</button>
-                                        </div>
+                                    <div class="form-group">                 
+                                            <button type="submit" class="btn btn-primary">Kaydet</button>                               
                                     </div>
                                 }
                             </div>
