--- a/CvBerkaySezer/Views/Home/Index.cshtml
+++ b/CvBerkaySezer/Views/Home/Index.cshtml
@@ -40,11 +40,11 @@
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="100">
 
-    <div class="lines-wrap">
+    @*<div class="lines-wrap">
         <div class="lines-inner">
             <div class="lines"></div>
         </div>
-    </div>
+    </div>*@
     <!-- END lines -->
 
     <div class="site-mobile-menu site-navbar-target">
