--- a/CvBerkaySezer/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
+++ b/CvBerkaySezer/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
@@ -10,6 +10,14 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <li class="nav-item">
+                    <a href="/Admin" class="nav-link">
+                        <i class="fa-solid fa-home"></i>
+                        <p>
+                            Ana Sayfa
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/Admin/Title" class="nav-link">
                         <i class="fa-solid fa-heading"></i>
                         <p>
