--- a/CvBerkaySezer/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
+++ b/CvBerkaySezer/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
@@ -58,6 +58,14 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="/Admin/Client" class="nav-link">
+                        <i class="fa-solid fa-users"></i>
+                        <p>
+                            Müşteriler
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/Admin/Message" class="nav-link">
                         <i class="fa-solid fa-message"></i>
                         <p>
