Client detail, client hosting

--- a/CvBerkaySezer/Areas/Admin/Views/Client/Index.cshtml
+++ b/CvBerkaySezer/Areas/Admin/Views/Client/Index.cshtml
@@ -52,6 +52,7 @@
                                             }
                                         </td>
                                         <td>
+                                            <a href="/Admin/Client/Detail/@client.Id" class="btn btn-outline-primary btn-sm">Detay</a>
                                             <a href="#" class="btn btn-outline-primary btn-sm btnMusteriDuzenle" data-id="@client.Id" data-musteri="@client.FullName" data-telefon="@client.Telephone" data-sil="@client.IsDeleted" data-eposta="@client.Email">Düzenle</a>
                                         </td>
                                     </tr>
