--- a/CvBerkaySezer/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CvBerkaySezer/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -24,6 +24,21 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="https://berkaysezer.com/favicon.ico" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script type="text/javascript">
+
+        function TlFormati(tutar) {
+            var currency_symbol = "₺"
+            var formattedOutput = new Intl.NumberFormat('tr-TR', {
+                style: 'currency',
+                currency: 'TRY',
+                minimumFractionDigits: 2,
+            });
+
+            return formattedOutput.format(tutar)
+        }
+    </script>
+
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
