skill icon, skill icon update, add

--- a/CvBerkaySezer/Views/Home/Index.cshtml
+++ b/CvBerkaySezer/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-
+    <script src="https://kit.fontawesome.com/3bdefffde0.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=PT+Mono&display=swap" rel="stylesheet">
@@ -68,6 +68,7 @@
                         <a href="#about-section" class="nav-link">Hakkımda</a>
                     </li>
                     <li><a href="#services-section" class="nav-link">Hizmetler</a></li>
+                    <li><a href="#skills-section" class="nav-link">Yetenekler</a></li>
                     <li><a href="#contact-section" class="nav-link" id="iletisim">İletişim</a></li>
                 </ul>
 
